--- a/typechecker/package.json
+++ b/typechecker/package.json
@@ -12,6 +12,8 @@
     "@types/jest": "^29.5.0",
     "@types/node": "^20.11.0",
     "jest": "^29.7.0",
+    "tree-sitter": "^0.25.0",
+    "tree-sitter-anima": "file:../tree-sitter-anima",
     "ts-jest": "^29.1.0",
     "typescript": "^5.3.3"
   }
