Enhance MCP server with execute, scaffold, and type checking
- anima_validate now runs type checker alongside parse validation
- anima_execute runs code through interpreter, captures output
- anima_scaffold generates boilerplate for entity/agent/intent/fuzzy
- Spec docs exposed as anima://spec/* resources
- Example files exposed as anima://examples/* resources

--- a/.gitignore
+++ b/.gitignore
@@ -9,11 +9,13 @@ Thumbs.db
 *.swo
 *~
 
-# Build artifacts (future)
+# Build artifacts
 /build/
 /dist/
 /out/
 /target/
+lsp/dist/
+editors/vscode/dist/
 
 # Node
 node_modules/
